deploy/k8s/overlays/independent/api-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dsp-api
spec:
  template:
    spec:
      containers:
        - name: api
          image: dsp-api:2.0.0
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: dsp-api
spec:
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dsp-api
spec:
  replicas: 2
