deploy/k8s/overlays/independent/remove-stateful-services.yaml
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
---
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: postgres
---
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
---
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: redis
