deploy/k8s/overlays/independent/web-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dsp-web
spec:
  template:
    spec:
      containers:
        - name: web
          image: dsp-web:2.0.0
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: dsp-web
spec:
  type: ClusterIP
